# chisel

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac  the_diffs  version.c
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2t
debian/: changelog  control
doc/: pen.ebnf  walls.fig
m2/: Makefile  bsp.def  bsp.mod  map.flex  map2bsp  map2bsp.mod  mapDebug.def  mapDebug.mod  mapError.def  mapError.mod  mapLexBuf.def  mapLexBuf.mod  mapOptions.def  mapOptions.mod  mapflex.def  nameKey.def  nameKey.mod  parser.bnf  parser.def  vector3.def  vector3.mod
m2/examples/map/: ebnf  test.map
maps/: .#monsters.txt  alec-map.txt  asset.txt  botwar1.txt  botwar2.txt  botwar3.txt  boxes.txt  boxes2.txt  cathedral.txt  complex.txt  complex2.txt  complex3.txt  complex4.txt  complex5.txt  concave.txt  concave2.txt  deathmatch.txt  defaults.txt  doom-map3.txt  doors.txt  eightbots.txt  empty.txt  five.txt  floor.txt  four.txt  fourbots.txt  full.txt  glover.pen  guardbot.txt  half.txt  hall.txt  label.txt  label2.txt  label3.txt  label4.txt  large.txt  large2.txt  left.txt  lighting.txt  lighting10.txt  (+79 more)
python/: building.py  chcuboid.py  chvec.py  developer-txt2map  doors.pen  five.pen  one.pen  opt-txt2map  pen2map.py  pen2map.py-  pen2map.py-works  pen2map.py.rej  pen2pen.py  poly.py  polymap.py  python.map  simple.pen  test_box.map  the_diffs  the_diffs-not-used  the_diffs-p2m  tiny.aas48  tiny.aas96  tiny.map  tiny.map-broken  tiny.map-works  tiny.map.works  tiny.pen  tiny.ss  txt2map  txt2pen.py  txt2txt.py
python/student/: chcuboid.py
python/t/: pen2map.py
random/: Find.def  GetOpt.def  GetOpt.mod  Makefile.am  Makefile.am~  Makefile.in  Options.mod  RoomMap.mod  Semantic.mod  genmaps  getopt.c  getopt.def  makemaps  remake  testch2.mod  testchan.mod
random/map/: AdvMap.def  AdvMap.mod  BoxMap.def  BoxMap.mod  Chance.def  Chance.mod  Find.mod  Geometry.mod  Makefile.in  Map.mod  Map_m2.cpp  Map_m2.s  RoomMap.def  RoomMap.mod  Semantic.mod  WriteMap.def  WriteMap.mod  map  remake  testcoor.mod
random/map/pen/: m4.pen
random/pen/: m1.pen  m2.pen  m3.pen  m6.pen
shell/: pen2map.in  txt2map  txt2pen  txt2pen.in
